[metadata]
name = qforce
version = 1.0
description = Q-Force: Quantum mechanically augmented molecular force fields 
author = Selim Sami
author_email = s.sami@rug.nl
licence = Apache 2.0
url = github.com/selimsami/qforce
keywords = qm forcefield md

[options]
setup-requires =
    setuptools
install-requires =
    scipy
    numpy
    ase 
    matplotlib
    seaborn
    networkx
    pulp<2.2
    numba
