[metadata]
name = qforce
version = 0.5.3
description = Q-Force: Quantum mechanically augmented molecular force fields 
author = Selim Sami
author_email = s.sami@rug.nl
licence = Apache 2.0
url = https://github.com/selimsami/qforce
keywords = qm forcefield md

classifier =
    Development Status :: 4 - Beta 
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Chemistry

[options]
setup-requires =
    setuptools
install-requires =
    scipy
    numpy>=1.20
    ase 
    matplotlib
    seaborn
    networkx
    pulp<2.2
    numba>=0.50
    pycolt>=0.3.0

