[metadata]
name = qforce
version = 0.6.12
description = Q-Force: Quantum mechanically augmented molecular force fields 
long_description = file: README.md
long_description_content_type = text/markdown
licence = Apache 2.0
author = Selim Sami
author_email = s.sami@rug.nl
url = https://github.com/selimsami/qforce
keywords = qm forcefield md

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Chemistry

[options]
setup_requires =
    setuptools
install_requires =
    scipy
    numpy
    ase
    matplotlib
    seaborn
    networkx
    pulp<2.2
    numba>=0.50
    pycolt>=0.5.3
